# substance-mipmaps-exporter

./: .docstr.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  .sdpackageignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  makepackage.py  pluginInfo.json  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yaml  test.yml
custommipmapsexport/: __init__.py  ddsfile.py  graphutils.py  gui.py
custommipmapsexport/res/: dialog.ui
example/: CustomMipLevels.sbs
src/buildscripts/: makepackage.py
src/custommipmapsexport/: __init__.py  ddsfile.py  debug.py  graphutils.py  gui.py  logger.py
tests/packaging/: test_makepackage.py
